# chip8-emulator

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/hardware/: cpu.rs  font.rs  instruction.rs  mod.rs
src/interfaces/: audio_interface.rs  display_interface.rs  input_interface.rs  mod.rs
