[package]
name = "chip8-emulator"
version = "0.1.0"
authors = ["Federico Scozzafava <federico.scozzafava@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
clap = "3.0.0-beta.1"

[dependencies.sdl2]
version = "0.34.0"
default-features = false
features = ["gfx"]